--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,4 @@
 
 <div id="content" align="center">
-  <div id="form" style="width: 500px">
-  <p>
-    Upload CSV
-  </p>
-  <form method="post" enctype="multipart/form-data" action="<%= upload_path %>" >
-    <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-    <input type="file" name="csv" />
-  <input type="submit" value="Upload" />
-  </form>
-  </div>
+  <%= render 'form' %>
 </div>
